// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render TabVariants Active Tab 1`] = `
<li
  className="movie-nav__item movie-nav__item--active"
>
  <a
    className="movie-nav__link"
    href="/"
    onClick={[Function]}
  >
    Overview
  </a>
</li>
`;

exports[`Render TabVariants No Active Tab 1`] = `
<li
  className="movie-nav__item"
>
  <a
    className="movie-nav__link"
    href="/"
    onClick={[Function]}
  >
    Overview
  </a>
</li>
`;
